--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -131,11 +131,11 @@ font=Tipus de lletra
 selectFillter=-- Selecciona --
 pageNum=Número de pàgina
 
-certSign.title=Significació del certificat
-certSign.header=Firmar un PDF amb el vostre certificat (Treball en curs)
+certSign.title=Signa amb certificat
+certSign.header=Firmar un PDF amb vostre certificat (Treball en curs)
 certSign.selectPDF=Seleccioneu un fitxer PDF per signar:
-certSign.selectKey=Seleccioneu el vostre fitxer de clau privada (format PKCS#8, podria ser .pem o .der):
-certSign.selectCert=Seleccioneu el vostre fitxer de certificat (format X.509, podria ser .pem o .der):
+certSign.selectKey=Seleccioneu el vostre fitxer de clau privada (format PKCS#8, pot ser .pem o .der):
+certSign.selectCert=Seleccioneu el vostre fitxer de certificat (format X.509, pot ser .pem o .der):
 certSign.selectP12=Seleccioneu el vostre fitxer de magatzem de claus PKCS#12 (.p12 o .pfx) (Opcional, si es proporciona, hauria de contenir la vostra clau privada i certificat):
 certSign.certType=Tipus de certificat
 certSign.password=Introduïu el vostre magatzem de claus o contrasenya de clau privada (si n'hi ha):
