--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -30,7 +30,7 @@ sizes.small=Small
 sizes.medium=Medium
 sizes.large=Large
 sizes.x-large=X-Large
-error.pdfPassword=The PDF Document is passworded and either the password was not provided or was incorrect
+error.pdfPassword=El document està protegit amb contrasenya o el password proporcionat és incorrecte
 
 
 #############
@@ -256,11 +256,8 @@ home.PdfToSinglePage.desc=Merges all PDF pages into one large single page
 PdfToSinglePage.tags=single page
 
 
-##########################
-###  TODO: Translate   ###
-##########################
-home.showJS.title=Show Javascript
-home.showJS.desc=Searches and displays any JS injected into a PDF
+home.showJS.title=Mostra Javascript
+home.showJS.desc=Cerca i mostra JS injectat al PDF
 showJS.tags=JS
 
 ###########################
@@ -268,14 +265,10 @@ showJS.tags=JS
 #       WEB PAGES         #
 #                         #
 ###########################
-#showJS
-##########################
-###  TODO: Translate   ###
-##########################
-showJS.title=Show Javascript
-showJS.header=Show Javascript
-showJS.downloadJS=Download Javascript
-showJS.submit=Show
+showJS.title=Mostra Javascript
+showJS.header=Mostra Javascript
+showJS.downloadJS=Descarrega Javascript
+showJS.submit=Mostra
 
 
 #pdfToSinglePage
@@ -314,34 +307,34 @@ URLToPDF.credit=Uses WeasyPrint
 
 
 #html-to-pdf
-HTMLToPDF.title=HTML To PDF
-HTMLToPDF.header=HTML To PDF
-HTMLToPDF.help=Accepts HTML files and ZIPs containing html/css/images etc required
-HTMLToPDF.submit=Convert
-HTMLToPDF.credit=Uses WeasyPrint
+HTMLToPDF.title=HTML a PDF
+HTMLToPDF.header=HTML a PDF
+HTMLToPDF.help=Accepta fitxers HTML i ZIPs amb contingut containing html/css/images etc requerit
+HTMLToPDF.submit=Convertir
+HTMLToPDF.credit=Empra WeasyPrint
 
 
 #sanitizePDF
-sanitizePDF.title=Sanitize PDF
-sanitizePDF.header=Sanitize a PDF file
-sanitizePDF.selectText.1=Remove JavaScript actions
-sanitizePDF.selectText.2=Remove embedded files
-sanitizePDF.selectText.3=Remove metadata
-sanitizePDF.selectText.4=Remove links
-sanitizePDF.selectText.5=Remove fonts
-sanitizePDF.submit=Sanitize PDF
+sanitizePDF.title=Sanititza PDF
+sanitizePDF.header=Sanititza un arxiu PDF
+sanitizePDF.selectText.1=Esborra accions JavaScript
+sanitizePDF.selectText.2=Esborra imatges incrustades
+sanitizePDF.selectText.3=Esborra metadades
+sanitizePDF.selectText.4=Esborra links
+sanitizePDF.selectText.5=Esborra fonts
+sanitizePDF.submit=Sanititza PDF
 
 
 #addPageNumbers
-addPageNumbers.title=Add Page Numbers
-addPageNumbers.header=Add Page Numbers
-addPageNumbers.selectText.1=Select PDF file:
-addPageNumbers.selectText.2=Margin Size
-addPageNumbers.selectText.3=Position
-addPageNumbers.selectText.4=Starting Number
-addPageNumbers.selectText.5=Pages to Number
-addPageNumbers.selectText.6=Custom Text
-addPageNumbers.submit=Add Page Numbers
+addPageNumbers.title=Afegeix nums de pàgina
+addPageNumbers.header=Afegeix nums de pàgina
+addPageNumbers.selectText.1=Selecciona arxiu PDF:
+addPageNumbers.selectText.2=Mida del Marge
+addPageNumbers.selectText.3=Posició
+addPageNumbers.selectText.4=Número Inici
+addPageNumbers.selectText.5=Pàgina a número
+addPageNumbers.selectText.6=Text Personalitzat
+addPageNumbers.submit=Afegeix nums de pàgina
 
 
 #auto-rename
