--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -187,44 +187,44 @@ home.compare.title=Compara
 home.compare.desc=Compara i mostra les diferències entre 2 documents PDF
 compare.tags=differentiate,contrast,changes,analysis
 
-home.certSign.title=Sign with Certificate
-home.certSign.desc=Signs a PDF with a Certificate/Key (PEM/P12)
+home.certSign.title=Signa amb Certificat
+home.certSign.desc=Signa el PDF amb Certificat/Clau (PEM/P12)
 certSign.tags=authenticate,PEM,P12,official,encrypt
 
-home.pageLayout.title=Multi-Page Layout
-home.pageLayout.desc=Merge multiple pages of a PDF document into a single page
+home.pageLayout.title=Dispocició Multi-Pàgina
+home.pageLayout.desc=Fusiona pàgines d'un PDF en una sola pàgina
 pageLayout.tags=merge,composite,single-view,organize
 
-home.scalePages.title=Adjust page size/scale
-home.scalePages.desc=Change the size/scale of page and/or its contents.
+home.scalePages.title=Ajusta mida/escala de la pàgina
+home.scalePages.desc=Cnavia la mida/escala de pàgina i/o contingut.
 scalePages.tags=resize,modify,dimension,adapt
 
-home.pipeline.title=Pipeline (Advanced)
-home.pipeline.desc=Run multiple actions on PDFs by defining pipeline scripts
+home.pipeline.title=Scripting (Avançat)
+home.pipeline.desc=Executa múltiples accions a PDFs definint scrips en cascada
 pipeline.tags=automate,sequence,scripted,batch-process
 
-home.add-page-numbers.title=Add Page Numbers
-home.add-page-numbers.desc=Add Page numbers throughout a document in a set location
+home.add-page-numbers.title=Afegir números de pàgina
+home.add-page-numbers.desc=Afegir números de pàgina en ubicació concreta
 add-page-numbers.tags=paginate,label,organize,index
 
-home.auto-rename.title=Auto Rename PDF File
-home.auto-rename.desc=Auto renames a PDF file based on its detected header
+home.auto-rename.title=Auto Renombra PDFs
+home.auto-rename.desc=Auto Renombra PDF basat en les seves capçaleres
 auto-rename.tags=auto-detect,header-based,organize,relabel
 
-home.adjust-contrast.title=Adjust Colors/Contrast
-home.adjust-contrast.desc=Adjust Contrast, Saturation and Brightness of a PDF
+home.adjust-contrast.title=Ajusta Colors/Contrast
+home.adjust-contrast.desc=Ajusta Contrast, Saturació i brillantor d'un PDF
 adjust-contrast.tags=color-correction,tune,modify,enhance
 
-home.crop.title=Crop PDF
-home.crop.desc=Crop a PDF to reduce its size (maintains text!)
+home.crop.title=Retalla PDF
+home.crop.desc=Retalla PDF per reduïr la mida (manté text!)
 crop.tags=trim,shrink,edit,shape
 
-home.autoSplitPDF.title=Auto Split Pages
-home.autoSplitPDF.desc=Auto Split Scanned PDF with physical scanned page splitter QR Code
+home.autoSplitPDF.title=Auto divideix Pàgines
+home.autoSplitPDF.desc=Auto divideix PDF amb un codi QR escanejat com a divisor
 autoSplitPDF.tags=QR-based,separate,scan-segment,organize
 
-home.sanitizePdf.title=Sanitize
-home.sanitizePdf.desc=Remove scripts and other elements from PDF files
+home.sanitizePdf.title=Sanititza
+home.sanitizePdf.desc=Esborra scripts i altres elements de PDFs
 sanitizePdf.tags=clean,secure,safe,remove-threats
 
 home.URLToPDF.title=URL/Website To PDF
@@ -279,8 +279,8 @@ showJS.submit=Show
 
 
 #pdfToSinglePage
-pdfToSinglePage.title=PDF To Single Page
-pdfToSinglePage.header=PDF To Single Page
+pdfToSinglePage.title=PDF a pàgina única
+pdfToSinglePage.header=PDF a pàgina única
 pdfToSinglePage.submit=Convert To Single Page
 
 
