--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -70,7 +70,7 @@ settings.downloadOption.2=Obre mateixa finestra
 settings.downloadOption.3=Descarrega Arxiu
 settings.zipThreshold=Comprimiu els fitxers quan el nombre de fitxers baixats superi
 settings.signOut=Sortir
-settings.accountSettings=Account Settings
+settings.accountSettings=Opcions del compte
 
 account.title=Opcions del compte
 account.accountSettings=Opcions del compte
@@ -238,8 +238,8 @@ home.compare.desc=Compara i mostra les diferències entre 2 documents PDF
 compare.tags=differentiate,contrast,changes,analysis
 
 home.certSign.title=Signa amb Certificat
-home.certSign.desc=Sign PDF amb Certificate/Clau (PEM/P12)
-certSign.tags=authentica,PEM,P12,official,encripta
+home.certSign.desc=Signa PDF amb Certificate/Clau (PEM/P12)
+certSign.tags=autentica,PEM,P12,oficial,encripta
 
 home.pageLayout.title=Multi-Page Layout
 home.pageLayout.desc=Merge multiple pages of a PDF document into a single page
@@ -277,17 +277,17 @@ home.sanitizePdf.title=Sanitize
 home.sanitizePdf.desc=Remove scripts and other elements from PDF files
 sanitizePdf.tags=clean,secure,safe,remove-threats
 
-home.URLToPDF.title=URL/Website To PDF
-home.URLToPDF.desc=Converts any http(s)URL to PDF
+home.URLToPDF.title=URL/Web a PDF
+home.URLToPDF.desc=Converteix http(s)URL a PDF
 URLToPDF.tags=web-capture,save-page,web-to-doc,archive
 
-home.HTMLToPDF.title=HTML to PDF
-home.HTMLToPDF.desc=Converts any HTML file or zip to PDF
+home.HTMLToPDF.title=HTML a PDF
+home.HTMLToPDF.desc=Converteix arxiu HTML o zip a PDF
 HTMLToPDF.tags=markup,web-content,transformation,convert
 
 
-home.MarkdownToPDF.title=Markdown to PDF
-home.MarkdownToPDF.desc=Converts any Markdown file to PDF
+home.MarkdownToPDF.title=Markdown a PDF
+home.MarkdownToPDF.desc=Converteix arxiu Markdown a PDF
 MarkdownToPDF.tags=markup,web-content,transformation,convert
 
 
@@ -329,80 +329,80 @@ login.signinTitle=Autenticat
 
 
 #auto-redact
-autoRedact.title=Auto Redact
-autoRedact.header=Auto Redact
+autoRedact.title=Auto Redacta
+autoRedact.header=Auto Redacta
 ##########################
 ###  TODO: Translate   ###
 ##########################
-autoRedact.colorLabel=Colour
-autoRedact.textsToRedactLabel=Text to Redact (line-separated)
-autoRedact.textsToRedactPlaceholder=e.g. \nConfidential  \nTop-Secret
-autoRedact.useRegexLabel=Use Regex
-autoRedact.wholeWordSearchLabel=Whole Word Search
-autoRedact.customPaddingLabel=Custom Extra Padding
-autoRedact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
-autoRedact.submitButton=Submit
+autoRedact.colorLabel=Color
+autoRedact.textsToRedactLabel=Text a Redact (separat per línia)
+autoRedact.textsToRedactPlaceholder=e.x. \nConfidencial  \nTop-Secret
+autoRedact.useRegexLabel=Empra Expressió
+autoRedact.wholeWordSearchLabel=Cerca paraula sencera
+autoRedact.customPaddingLabel=Extra Padding Personalitzat
+autoRedact.convertPDFToImageLabel=Converteix PDF a PDF-Imatge (Emprat per esborrar text darrera el box)
+autoRedact.submitButton=Envia
 
 
 #showJS
-showJS.title=Show Javascript
-showJS.header=Show Javascript
-showJS.downloadJS=Download Javascript
-showJS.submit=Show
+showJS.title=Mostra Javascript
+showJS.header=Mostra Javascript
+showJS.downloadJS=Descarrega Javascript
+showJS.submit=Mostra
 
 
 #pdfToSinglePage
-pdfToSinglePage.title=PDF To Single Page
-pdfToSinglePage.header=PDF To Single Page
-pdfToSinglePage.submit=Convert To Single Page
+pdfToSinglePage.title=PDF a Pàgina Única
+pdfToSinglePage.header=PDF a Pàgina Única
+pdfToSinglePage.submit=Converteix a PDF a Pàgina Única
 
 
 #pageExtracter
-pageExtracter.title=Extract Pages
-pageExtracter.header=Extract Pages
-pageExtracter.submit=Extract
+pageExtracter.title=Extreu Pàgines
+pageExtracter.header=Extreu Pàgines
+pageExtracter.submit=Extreu
 
 
 #getPdfInfo
-getPdfInfo.title=Get Info on PDF
-getPdfInfo.header=Get Info on PDF
-getPdfInfo.submit=Get Info
-getPdfInfo.downloadJson=Download JSON
+getPdfInfo.title=Obtenir informació en PDF
+getPdfInfo.header=Obtenir informació en PDF
+getPdfInfo.submit=Obtenir informació
+getPdfInfo.downloadJson=Descarrega JSON
 
 
 #markdown-to-pdf
-MarkdownToPDF.title=Markdown To PDF
-MarkdownToPDF.header=Markdown To PDF
-MarkdownToPDF.submit=Convert
-MarkdownToPDF.help=Work in progress
-MarkdownToPDF.credit=Uses WeasyPrint
+MarkdownToPDF.title=Markdown a PDF
+MarkdownToPDF.header=Markdown a PDF
+MarkdownToPDF.submit=Converteix
+MarkdownToPDF.help=Treballant
+MarkdownToPDF.credit=Utilitza WeasyPrint
 
 
 
 #url-to-pdf
-URLToPDF.title=URL To PDF
-URLToPDF.header=URL To PDF
-URLToPDF.submit=Convert
-URLToPDF.credit=Uses WeasyPrint
+URLToPDF.title=URL a PDF
+URLToPDF.header=URL a PDF
+URLToPDF.submit=Converteix
+URLToPDF.credit=Utilitza WeasyPrint
 
 
 #html-to-pdf
-HTMLToPDF.title=HTML To PDF
-HTMLToPDF.header=HTML To PDF
-HTMLToPDF.help=Accepts HTML files and ZIPs containing html/css/images etc required
-HTMLToPDF.submit=Convert
-HTMLToPDF.credit=Uses WeasyPrint
+HTMLToPDF.title=HTML a PDF
+HTMLToPDF.header=HTML a PDF
+HTMLToPDF.help=Accepta arxius HTML i ZIPs que conté html/css/imatges etc requerit
+HTMLToPDF.submit=Converteix
+HTMLToPDF.credit=Utilitza WeasyPrint
 
 
 #sanitizePDF
-sanitizePDF.title=Sanitize PDF
-sanitizePDF.header=Sanitize a PDF file
-sanitizePDF.selectText.1=Remove JavaScript actions
-sanitizePDF.selectText.2=Remove embedded files
-sanitizePDF.selectText.3=Remove metadata
-sanitizePDF.selectText.4=Remove links
-sanitizePDF.selectText.5=Remove fonts
-sanitizePDF.submit=Sanitize PDF
+sanitizePDF.title=Sanititza PDF
+sanitizePDF.header=Sanititza arxiu PDF
+sanitizePDF.selectText.1=Esborra accions JavaScript
+sanitizePDF.selectText.2=Esborra arxius incrustats
+sanitizePDF.selectText.3=Esborra metadades
+sanitizePDF.selectText.4=Esborra links
+sanitizePDF.selectText.5=Esborra fonts
+sanitizePDF.submit=Sanititza PDF
 
 
 #addPageNumbers
@@ -421,18 +421,18 @@ addPageNumbers.submit=Afegir Números de Pàgina
 
 
 #auto-rename
-auto-rename.title=Auto Rename
-auto-rename.header=Auto Rename PDF
-auto-rename.submit=Auto Rename
+auto-rename.title=Auto Renombra
+auto-rename.header=Auto Renombra PDF
+auto-rename.submit=Auto Renombra
 
 
 #adjustContrast
-adjustContrast.title=Adjust Contrast
-adjustContrast.header=Adjust Contrast
+adjustContrast.title=Ajusta Contrast
+adjustContrast.header=Ajusta Contrast
 adjustContrast.contrast=Contrast:
-adjustContrast.brightness=Brightness:
-adjustContrast.saturation=Saturation:
-adjustContrast.download=Download
+adjustContrast.brightness=Brillantor:
+adjustContrast.saturation=Saturació:
+adjustContrast.download=Descarrega
 
 
 #crop
@@ -442,18 +442,18 @@ crop.submit=Submit
 
 
 #autoSplitPDF
-autoSplitPDF.title=Auto Split PDF
-autoSplitPDF.header=Auto Split PDF
-autoSplitPDF.description=Print, Insert, Scan, upload, and let us auto-separate your documents. No manual work sorting needed.
-autoSplitPDF.selectText.1=Print out some divider sheets from below (Black and white is fine).
-autoSplitPDF.selectText.2=Scan all your documents at once by inserting the divider sheet between them.
+autoSplitPDF.title=Divisió automàtica de PDF
+autoSplitPDF.header=Divisió automàtica de PDF
+autoSplitPDF.description=Imprimeix, Inserta, Escaneja, puja, i auto-separa documents. No cal classificar el treball manualment.
+autoSplitPDF.selectText.1=Imprimiu fulls divisors des de sota (el blanc i negre està bé).
+autoSplitPDF.selectText.2=Escaneja tots els documents alhora inserint el full divisor entre ells.
 autoSplitPDF.selectText.3=Upload the single large scanned PDF file and let Stirling PDF handle the rest.
 autoSplitPDF.selectText.4=Divider pages are automatically detected and removed, guaranteeing a neat final document.
 autoSplitPDF.formPrompt=Submit PDF containing Stirling-PDF Page dividers:
 autoSplitPDF.duplexMode=Duplex Mode (Front and back scanning)
 autoSplitPDF.dividerDownload1=Download 'Auto Splitter Divider (minimal).pdf'
 autoSplitPDF.dividerDownload2=Download 'Auto Splitter Divider (with instructions).pdf'
-autoSplitPDF.submit=Submit
+autoSplitPDF.submit=Envia
 
 
 #pipeline
@@ -464,15 +464,15 @@ pipeline.title=Pipeline
 pageLayout.title=Multi Page Layout
 pageLayout.header=Multi Page Layout
 pageLayout.pagesPerSheet=Pages per sheet:
-pageLayout.submit=Submit
+pageLayout.submit=Envia
 
 
 #scalePages
-scalePages.title=Adjust page-scale
-scalePages.header=Adjust page-scale
-scalePages.pageSize=Size of a page of the document.
-scalePages.scaleFactor=Zoom level (crop) of a page.
-scalePages.submit=Submit
+scalePages.title=Ajusta escalat de pàgina
+scalePages.header=Ajusta escalat de pàgina
+scalePages.pageSize=Mida de pàgina del document
+scalePages.scaleFactor=Nivell de Zoom (tallat) de la pàgina.
+scalePages.submit=Envia
 
 
 #certSign
@@ -510,7 +510,7 @@ compare.submit=Comparar
 
 
 #sign
-sign.title=Sign
+sign.title=Signa
 sign.header=Firma els PDF
 sign.upload=Penja la imatge
 sign.draw=Dibuixa la signatura
@@ -602,8 +602,8 @@ addImage.submit=Afegir Imatge
 #merge
 merge.title=Fusiona
 merge.header=Fusiona múltiples PDFs (2+)
-merge.sortByName=Sort by name
-merge.sortByDate=Sort by date
+merge.sortByName=Ordena per nom
+merge.sortByDate=Ordena per data
 merge.submit=Fusiona
 
 
